# leakcheck

./: CMakeLists.txt  leakcheck  leakcheck.map  leakcheck_simple  meson.build
src/: api.c
src/leakcheck/: api.c  leakcheck.c  leakcheck.h
src/leakcheck_simple/: api.c  leakcheck_simple.c  leakcheck_simple.h
test/: test_calloc.c  test_invalid_free.c  test_mallinfo.c  test_malloc.c  test_missing_free.c  test_realloc.c
